--- a/tmsuser/templates/save_login.html
+++ b/tmsuser/templates/save_login.html
@@ -15,31 +15,24 @@
               <div class="text-center">
                 <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
               </div>
-              <form class="user" method="POST" action="{% url 'login' %}">
-                {% csrf_token %}
-                {% for field in form %}
+              <form class="user">
                 <div class="form-group">
-                  <label for="{{ field.id_for_label }}">{{ field.label }}</label>
-                  <input type="{{ field.field.widget.input_type }}" class="form-control form-control-user"
-                    id="{{ field.id_for_label }}" aria-describedby="emailHelp" placeholder="{{ field.label }}"
-                    name="{{ field.name }}" />
+                  <input type="email" class="form-control form-control-user" id="exampleInputEmail"
+                    aria-describedby="emailHelp" placeholder="Enter Email Address...">
                 </div>
-                <!-- <div class="form-group">
+                <div class="form-group">
                   <input type="password" class="form-control form-control-user" id="exampleInputPassword"
                     placeholder="Password">
-                </div> -->
-                {% if field_errors %}
-                <span style="color: red">{{ field.errors }}</span>
-                {% endif %}
-                {% endfor %}
+                </div>
                 <div class="form-group">
                   <div class="custom-control custom-checkbox small">
                     <input type="checkbox" class="custom-control-input" id="customCheck">
                     <label class="custom-control-label" for="customCheck">Remember Me</label>
                   </div>
                 </div>
-                <button type="button" class="btn btn-primary btn-user btn-block">Login</button>
-
+                <a href="index.html" class="btn btn-primary btn-user btn-block">
+                  Login
+                </a>
                 <hr>
                 <a href="index.html" class="btn btn-google btn-user btn-block">
                   <i class="fab fa-google fa-fw"></i> Login with Google
