--- a/sensor/templates/data.html
+++ b/sensor/templates/data.html
@@ -25,7 +25,7 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 
 <script>
-    var endpoint = 'api';
+    var endpoint = 'ape';
 
     $.ajax({
         method: "GET",
