--- a/sensor/templates/index.html
+++ b/sensor/templates/index.html
@@ -9,21 +9,59 @@
         <canvas id="myChartline_1"></canvas>
     </div>
     <div class="col-md-7">
-        <table>
-            <tr>
-                <thead>
-                    <tr>
-                        <th>fjwejfwjefojwe</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <th>
-                            fwefwef
-                        </th>
-                    </tr>
-                </tbody>
-            </tr>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th scope="col">*</th>
+                    <th scope="col">ID</th>
+                    <th scope="col">TIME</th>
+                    <th scope="col">Temperature</th>
+                    <th scope="col">Humidity</th>
+                    <th scope="col">Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="row">1</th>
+                    <td>TMSUSER_1</td>
+                    <td>11:24</td>
+                    <td>13.8</td>
+                    <td>90.5</td>
+                    <td style="color:green;">Normal</td>
+                </tr>
+                <tr>
+                    <th scope="row">2</th>
+                    <td>TMSUSER_2</td>
+                    <td>11:25</td>
+                    <td>14.1</td>
+                    <td>90.5</td>
+                    <td style="color:green;">Normal</td>
+                </tr>
+                <tr>
+                    <th scope="row">3</th>
+                    <td>TMSUSER_3</td>
+                    <td>11:26</td>
+                    <td>14.9</td>
+                    <td>90.5</td>
+                    <td style="color:green;">Normal</td>
+                </tr>
+                <tr>
+                    <th scope="row">4</th>
+                    <td>TMSUSER_4</td>
+                    <td>11:27</td>
+                    <td>15.1</td>
+                    <td>90.5</td>
+                    <td style="color:red;">Warning</td>
+                </tr>
+                <tr>
+                    <th scope="row">5</th>
+                    <td>TMSUSER_5</td>
+                    <td>11:28</td>
+                    <td>13.8</td>
+                    <td>90.5</td>
+                    <td style="color:red;">Warning</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </div>
